--- a/tests/wowza/wowza-input.conf
+++ b/tests/wowza/wowza-input.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => [ "/root/logs/wowzamediaserver_access.log1" ]
+        path => [ "tests/wowza/logs/wowzamediaserver_access.log" ]
         start_position  => "beginning"
         sincedb_path => "/dev/null"
         type => "wowza-access"
@@ -11,7 +11,7 @@ input {
 filter {
   if [type] == "wowza-access" {
     grok {
-      patterns_dir => ["/etc/logstash/grok.d/"]
+      patterns_dir => ["grok.d/"]
       match => { "message" => "%{WOWZAACCESSLOG}" }
     }
     date {
