logstash does not support relative paths, so changing to stdin filter

--- a/tests/wowza/wowza-input.conf
+++ b/tests/wowza/wowza-input.conf
@@ -1,8 +1,5 @@
 input {
-    file {
-        path => [ "tests/wowza/logs/wowzamediaserver_access.log" ]
-        start_position  => "beginning"
-        sincedb_path => "/dev/null"
+    stdin {
         type => "wowza-access"
     }
 }
